--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
        <!--  Вторая секция -->
         <section class="back">
             <div class="container navbar">
-                <img class="navbar__logo" src="/src/img/logo.png" alt="logo">
+                <img class="navbar__logo" src="./src/img/logo.png" alt="logo">
                 <span class="navbar__name">BEAUTY</span>
                 <div class="navbar__search">
                     <div class="navbar__search_lens">
-                        <img src="/src/img/Vector.png" alt="lupa">
+                        <img src="./src/img/Vector.png" alt="lupa">
                     </div>
                 </div>
                 <a class="navbar__tel" href="tel:88121234567">8 (812) 123-45-67</a>
